[package]
name = "kittykat"
version = "0.2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.95"
arti-client = { version = "0.27.0", features = ["tokio"] }
http = "1.2.0"
hyper = { version = "1.6.0", features = ["full", "http1", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-task-pool = "0.1.5"
tor-rtcompat = { version = "0.27.0", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-util = { version = "0.7.13", features = ["compat", "io-util"] }
uuid = { version = "1.13", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
